# pe-parser

./: .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix
src/: main.cpp  mappedfile.cpp  mappedfile.h  parser.cpp  parser.h  winTypes.h
